--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,8 +123,8 @@ job_docker_nightly:
     - DOCKER_VERSION=$CI_COMMIT_REF_SLUG
     - DOCKER_IMAGE_MAYAN_NAME=$CI_REGISTRY_IMAGE
     - make docker-build
-    - docker tag "mayanedms/mayanedms:$DOCKER_VERSION" "$CI_REGISTRY_IMAGE:$DOCKER_VERSION"
-    - docker push "$CI_REGISTRY_IMAGE:$DOCKER_VERSION"
+    - docker tag "mayanedms/mayanedms:$DOCKER_VERSION" "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
+    - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
     - docker logout $CI_REGISTRY
   services:
     - docker:20-dind
