Add Docker Compose file port comment
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - "traefik.http.routers.mayan.entrypoints=web"
     profiles:
       - all_in_one
+    # Disable ports if using Traefik.       
     ports:
       - "80:8000"
 
@@ -109,6 +110,7 @@ services:
     <<: *mayan-container
     command:
       - run_frontend
+    # Disable ports if using Traefik.
     ports:
       - "80:8000"
     profiles:
