Quote distribution name variable
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/config.env
+++ b/config.env
@@ -7,7 +7,7 @@ DEFAULT_DIRECTORY_MEDIA_ROOT=/opt/mayan-edms/media/
 DEFAULT_DATABASE_NAME=mayan
 DEFAULT_DATABASE_PASSWORD=mayanuserpass
 DEFAULT_DATABASE_USER=mayan
-DEFAULT_OS_DISTRIBUTION=Debian 11
+DEFAULT_OS_DISTRIBUTION="Debian 11"
 DEFAULT_OS_GROUP=mayan
 DEFAULT_OS_USERNAME=mayan
 DEFAULT_RABBITMQ_PASSWORD=mayanrabbitmqpassword
