--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -204,6 +204,7 @@ services:
       - "8080:8080"
     profiles:
       - traefik
+    restart: unless-stopped
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
 
