Pin Jinja2 version to workaround Sphinx bug
Sphinx Jinja2 dependency is not pinned or immutable,
and causes the installation of an incompatible version
breaking builds.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -201,6 +201,7 @@ job_documentation_build:
     - tests/documentation
   script:
     - pip install --requirement requirements/documentation.txt
+    - pip install --requirement requirements/documentation_override.txt
     - cd docs
     - make html
   stage: stage_build_documentation
