Rename initial setup and upgrade commands
Add the app name to the `initial_setup` and `perform_upgrade`
command for consistency with the other command renames.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -221,12 +221,12 @@ services:
     profiles:
       - extra_celery_beat
 
-  command_initialsetup_or_performupgrade:
+  setup_or_upgrade:
     <<: *mayan-container
     command:
-      - run_initialsetup_or_performupgrade
+      - run_initial_setup_or_perform_upgrade
     profiles:
-      - extra_command_initialsetup_or_performupgrade
+      - extra_setup_or_upgrade
     restart: "no"
 
   rabbitmq:
