Add GitOps branches to triggers CI tests only
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -232,6 +232,9 @@ job_python_push_pypi:
     - releases/python_major
     - releases/python_minor
     - releases/staging
+    - tests/all
+    - tests/python
+    - tests/upgrade
   stage: stage_test
 
 job_mysql_upgrade_test:
@@ -304,6 +307,9 @@ job_sqlite_upgrade_test:
     - releases/python_major
     - releases/python_minor
     - releases/staging
+    - tests/all
+    - tests/base
+    - tests/python
   stage: stage_test
 
 job_postgres_test:
